@@ -37,6 +37,7 @@ typedef enum
 typedef enum
 {
     GNOME_CMD_SIZE_DISP_MODE_PLAIN,
+    GNOME_CMD_SIZE_DISP_MODE_LOCALE,
     GNOME_CMD_SIZE_DISP_MODE_GROUPED,
     GNOME_CMD_SIZE_DISP_MODE_POWERED
 } GnomeCmdSizeDispMode;
