@@ -1,3 +1,14 @@
+2006-11-25  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-advrename-dialog.c:
+	* src/gnome-cmd-file-selector.c:
+	* src/gnome-cmd-ftp-dialog.c:
+	* src/gnome-cmd-options-dialog.c:
+	* src/gnome-cmd-types.h:
+	* src/utils.c:
+	* src/utils.h:
+	More work on grouping of file size digits
+
 2006-11-23  Dirk Göttel <dgoettel@freenet.de>
 
 	* data/gnome-commander.ebuild:
